--- a/Demo4/Demo4/Base.lproj/Main.storyboard
+++ b/Demo4/Demo4/Base.lproj/Main.storyboard
@@ -79,11 +79,19 @@
                                     <action selector="addItem:" destination="BYZ-38-t0r" eventType="touchUpInside" id="5rP-sA-HD3"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fcq-NU-oRw">
+                                <rect key="frame" x="23" y="66" width="73" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="defaultLabel" destination="fcq-NU-oRw" id="sJc-Qh-DeF"/>
                         <outlet property="input" destination="lVP-Kn-s6g" id="bhV-la-bA2"/>
                         <outlet property="tableView" destination="QK7-p7-byx" id="YIm-je-Rwh"/>
                     </connections>
